Still fixin' the mobile view overflow

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ header > div > p { font-size: 20px; color: #ccc; }
 .section-1{
     width: 100%;
     height: 100%;
+    flex: 1;
     margin: 0;
     padding: 20px;
     box-sizing: border-box;
@@ -249,7 +250,6 @@ header > div > p { font-size: 20px; color: #ccc; }
 {
     #btnDelete { display: none;}
     #delete-chat { display: block;}
-    .container { height: calc(100vh - env(safe-area-inset-bottom)); }
     .bot-chat-box > img { width: 30px; height: 30px; }
     .section-1::-webkit-scrollbar { width: 3px;}
     .user-message-box, .bot-message-box { max-width: 300px; width: max-content;}
